# image-to-gradient

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
console_app/: CMakeLists.txt  main.cpp
gui_app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
image-to-gradient/: CMakeLists.txt  boost_image.hpp  gradient.hpp  image-to-gradient.cpp  image-to-gradient.h  image.hpp  pixel.hpp
include/: gradient.hpp
include/gradient/: builder.hpp  color.hpp  linear.hpp  linear_builder.hpp
include/gradient/builder/: approximate.hpp  find_farthest.hpp  step_count.hpp
include/gradient/operator/: abs_diff.hpp  lerp.hpp  max_difference.hpp
include/gradient/strategy/: approximate.hpp  find_farthest.hpp  step_count.hpp
include/image/: boost_image.hpp  boost_pixel.hpp  qt_image.hpp
visual-tool/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
